tests/should_fail/bug/773.stderr
error: Laws cannot have additional generic parameters or trait constraints
  --> 773.rs:13:5
   |
13 | /     fn a(self)
14 | |     where
15 | |         Self: One;
   | |__________________^

error: aborting due to 1 previous error

